--- a/Banking/App.config
+++ b/Banking/App.config
@@ -5,10 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Banking.Properties.Settings.bankConnectionString" connectionString="Data Source=localhost;Initial Catalog=bank;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
-    <add name="bankEntities" connectionString="metadata=res://*/Data.Bank.csdl|res://*/Data.Bank.ssdl|res://*/Data.Bank.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=bank;integrated security=True;pooling=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="bankEntities1" connectionString="metadata=res://*/Data.Model1.csdl|res://*/Data.Model1.ssdl|res://*/Data.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=bank;integrated security=True;pooling=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="bankEntities" connectionString="metadata=res://*/Data.Model.csdl|res://*/Data.Model.ssdl|res://*/Data.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=bank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
